トップページの仏訳

--- a/french/index-fr.html
+++ b/french/index-fr.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
-    <title>Accueil</title>
+    <link rel="stylesheet" href="../css/index-ja.css">
+    <title>HOME</title>
 </head>
 
 <body>
@@ -24,18 +25,102 @@
         </div>
         <nav class="page-header__menu">
             <ol>
-                <li class="menu-index menu" id="header-menu-index"><a href="index-fr.html">Accueil</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-fr.html">Introduction à l'école</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-fr.html">Contenu pédagogique</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-fr.html">Matériel scolaire</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-fr.html">Examen d'entrée</a></li>
-                <li class="menu-access menu" id="header-menu-access"><a href="access-fr.html">Accès</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-fr.html">Enquête</a></li>
+                <li class="menu-index menu" id="header-menu-index"><a href="index-en.html">HOME</a></li>
+                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-en.html">Introduction</a></li>
+                <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a>
+                </li>
+                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a>
+                </li>
+                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance
+                        Examination</a></li>
+                <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
+                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
             </ol>
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+        <div class="main-header__inner">
+            <div class="page-main__header">
+                <h1 class="page-main__header1">Welcome to</h1>
+                <h1 class="page-main__header2">London Management School</h1>
+            </div>
+        </div>
+        <div class="main-content__inner">
+            <div class="page-main__content">
+                <section class="content-news content">
+                    <h2 class="content-news__header">NEWS</h2>
+                    <div class="news">
+                        <div>
+                            <p>11 mars 2020</p>
+                            <p>Examen d'entrée sur l'examen d'entrée à l'école pour le virus corona</p>
+                        </div>
+                        <div>
+                            <p>11 mars 2020</p>
+                            <p>Nouvelles sur la fermeture temporaire d'une école</p>
+                        </div>
+                        <div>
+                            <p>10 mars 2020</p>
+                            <p>Actualités sur stop excursion</p>
+                        </div>
+                        <div>
+                            <p>06 mars 2020</p>
+                            <p>Événement sur le report de la conférence, Histoire de Londres et de l'avenir, par Benjamin</p>
+                        </div>
+                        <div>
+                            <p>04 mars 2020</p>
+                            <p>Award Malaya, une élève de deuxième année, a remporté le prix d'argent au London Speech Contest</p>
+                        </div>
+                        <div>
+                            <p>01 mars 2020</p>
+                            <p>Examen d'entrée La date limite d'inscription à notre examen d'entrée est imminente</p>
+                        </div>
+                        <div>
+                            <p>29 février 2020</p>
+                            <p>Autres Cette année est une année bissextile</p>
+                        </div>
+                        <div>
+                            <p>26 février 2020</p>
+                            <p>Événement À propos de la mise en œuvre du nettoyage du campus</p>
+                        </div>
+                        <div>
+                            <p>24 février 2020</p>
+                            <p>Notre école a remporté le London Best International School Award 2019</p>
+                        </div>
+                        <div>
+                            <p>24 février 2020</p>
+                            <p>D'autres sur les soins de santé</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="content-contents content">
+                    <h2 class="content-contents__header">CONTENTS</h2>
+                    <div class="ccc">
+                        <div>
+                            <h3>Cliquez ici pour notre école</h3>
+                            <p>Présentation de l'école, activités du club, événements annuels, etc.</p>
+                        </div>
+                        <div>
+                            <h3>Cliquez ici pour notre éducation</h3>
+                            <p>Présentation du programme éducatif de l'école</p>
+                        </div>
+                        <div>
+                            <h3>Cliquez ici pour notre installation</h3>
+                            <p>Introduction des installations spécialisées</p>
+                        </div>
+                        <div>
+                            <h3>Cliquez ici pour notre examen d'entrée</h3>
+                            <p>Introduction de la méthode d'examen d'entrée, des conditions d'examen d'entrée, etc.</p>
+                        </div>
+                        <div>
+                            <h3>Cliquez ici pour notre accès</h3>
+                            <p>Introduction de l'accès depuis la ville de Londres, aéroport</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
