--- a/french/inquiry-fr.html
+++ b/french/inquiry-fr.html
@@ -35,7 +35,59 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <div>
+          <h1>Enquête</h1>
+      </div>
+      <div>
+          <p>Si vous êtes intéressé par notre école, n'hésitez pas à nous contacter. Une fois que vous avez entré les informations requises,
+             nous vous ferons parvenir le matériel d'admission de l'école.</p>
+          <div>
+              <h2>Numéro de téléphone</h2>
+              <p>☏123-4567-8901</p>
+          </div>
+          <div>
+              <h2>Demande de document</h2>
+              <div class="form">
+                  <form name="fome1" action="" method="post">
+                      <div class="form_name">
+                          <label for="name">Name：</label>
+                          <input type="text" required id="name" name="user_name" placeholder="Jean London">
+                      </div>
+                      <div class="form_mail">
+                          <label for="email">Email：</label>
+                          <input type="email" required id="email" name="user_email" placeholder="XXXX@YYY.ZZZ">
+                      </div>
+                      <div class="form_msg">
+                          <label for="msg">Message：</label>
+                          <textarea id="msg" name="user_message" placeholder="Please write freely"></textarea>
+                      </div>
+                      <div class="form_button">
+                          <input type="button" id="btn" value="Send Message" onclick="sendMessage()">
+                          <script type="text/javascript">
+                              function sendMessage() {
+                                  var name = document.getElementById('name').value;
+                                  var email = document.getElementById('email').value;
+                                  var msg = document.getElementById('msg').value;
+                                  /*--デバック用コンソール--
+                                  console.log(name);
+                                  console.log(email);
+                                  console.log(msg);
+                                  -------------------------*/
+                                  if (name == "" || email == "") {
+                                      var message = String("Name and Email are required fields");
+                                  } else {
+                                      var message = String("name : " + name + "\nEmail : " + email + "\n\n---message---\n" + msg + "\n----------------\n" + "\n以上の内容で送信しました。");
+                                  }
+                                  alert(message);
+                              }
+                          </script>
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
