--- a/french/index-fr.html
+++ b/french/index-fr.html
@@ -25,16 +25,13 @@
         </div>
         <nav class="page-header__menu">
             <ol>
-                <li class="menu-index menu" id="header-menu-index"><a href="index-en.html">HOME</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-en.html">Introduction</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a>
-                </li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a>
-                </li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance
-                        Examination</a></li>
-                <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
+                <li class="menu-index menu" id="header-menu-index"><a href="index-fr.html">Accueil</a></li>
+                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-fr.html">Introduction à l'école</a></li>
+                <li class="menu-content menu" id="header-menu-content"><a href="content-fr.html">Contenu pédagogique</a></li>
+                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-fr.html">Matériel scolaire</a></li>
+                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-fr.html">Examen d'entrée</a></li>
+                <li class="menu-access menu" id="header-menu-access"><a href="access-fr.html">Accès</a></li>
+                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-fr.html">Enquête</a></li>
             </ol>
         </nav>
     </header>
