--- a/french/index-fr.html
+++ b/french/index-fr.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
     <link rel="stylesheet" href="../css/index-ja.css">
-    <title>HOME</title>
+    <title>Accueil</title>
 </head>
 
 <body>
