--- a/french/intro-fr.html
+++ b/french/intro-fr.html
@@ -35,7 +35,76 @@
         </nav>
     </header>
     <!--メイン-->
-    <main class="page-main"></main>
+    <main class="page-main">
+      <h1>Introduction à l'école</h1>
+      <h2>Présentation de notre école</h2>
+      <p>
+        Notre école s'engage à développer des ressources humaines qui peuvent jouer un rôle actif à l'international et qui possèdent des compétences de gestion de classe mondiale.
+         Nous soutenons les jeunes désireux d'apprendre, quelle que soit leur race ou leur porte.
+      </p>
+      <h2>Développement des compétences en gestion</h2>
+      <p>
+        L'école propose un programme d'études unique et une formation active afin de développer de riches compétences en gestion.
+         Nous développons des compétences pratiques et élevons vos capacités à un niveau de classe mondiale.
+      </p>
+      <h2>École internationale</h2>
+      <p>
+        Nous visons à éduquer les étudiants internationaux. Vous parlez habituellement l'anglais et diverses races, en particulier le japonais et le français,
+         étudier ensemble dans le même espace. Vous pouvez passer trois ans avec beaucoup de stimulation à cause de l'environnement où
+         il y a des courses multinationales à un stade précoce.
+      <h2>Répartition des étudiants</h2>
+      <table>
+          <tbody>
+              <tr>
+                  <td></td>
+                  <td>hommes</td>
+                  <td>femmes</td>
+              </tr>
+              <tr>
+                  <td>Première année</td>
+                  <td>55 personnes</td>
+                  <td>47 personnes</td>
+              </tr>
+              <tr>
+                  <td>Deuxième année</td>
+                  <td>52 personnes</td>
+                  <td>44 personnes</td>
+              </tr>
+              <tr>
+                  <td>Troisième année</td>
+                  <td>50 personness</td>
+                  <td>49 personnes</td>
+              </tr>
+          </tbody>
+      </table>
+      <h2>Itinéraire scolaire</h2>
+        <p>Notre école a été rénovée à partir d'une école japonaise à Londres. Jusque-là, c'était une école pour les japonais,
+            mais il est né il y a 10 ans en tant qu'école internationale dans le but de développer les ressources humaines internationales.</p>
+      <h2>Activités du club</h2>
+        <p>L'école se concentre également sur les activités du club et réalise les activités du club suivantes.
+           Nous promettons de jeunes jours de lycée pendant trois ans</p>
+        <h3>Activités du club d'athlétisme</h3>
+          Les clubs suivants sont tous masculins et féminins
+          <p>・Football</p>
+          <p>・Criquet</p>
+          <p>・Basketball</p>
+        <h3>Activités du club culturel</h3>
+          <p>・Brass band</p>
+          <p>・Choral/Chorale</p>
+          <p>・Groupe d'étude sur la culture mondiale</p>
+          <p>・Bénévole</p>
+      <h2>Évènement annuel</h2>
+        <p>・Cérémonie d'entrée (septembre)</p>
+        <p>・Festival des sports (octobre)</p>
+        <p>・Rencontre d'échange avec des étudiants internationaux (décembre)</p>
+        <p>・Test intermédiaire (janvier)</p>
+        <p>・Excursion (mars)</p>
+        <p>・Jour de la rentrée (mars)</p>
+        <p>・examen de fin de session (mai)</p>
+        <p>・Cérémonie de remise des diplômes (juin)</p>
+        <p>・Longues vacances (de juin à septembre)</p>
+        <p>・Famille d'accueil à l'étranger (juillet)</p>
+    </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
 </body>
