フランス語の教育内容のデザインと微調整

--- a/french/content-fr.html
+++ b/french/content-fr.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/style-ja.css">
+    <link rel="stylesheet" href="../css/content-ja.css">
     <title>Contenu pédagogique</title>
 </head>
 
@@ -36,7 +37,7 @@
     </header>
     <!--メイン-->
     <main class="page-main">
-      <div class="page-main">
+      <div class="main-inner">
         <div class="page-main__header">
           <h1 class="page-submain__header">Contenu pédagogique</h1>
         </div>
