--- a/japanese/facility-ja.html
+++ b/japanese/facility-ja.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/style-ja.css">
+  <link rel="stylesheet" href="../css/facility-ja.css">
   <title>学校設備</title>
 </head>
 
@@ -36,48 +37,79 @@
     </nav>
   </header>
   <!--メイン-->
-  <main class="page-main">
-    <h1>本学の設備</h1>
-    <p>
-      <h2><u>中庭</u></h2>
-      <img src="../img/facility/garden.jpg" alt="中庭">
-      本校自慢の中庭。この中庭は世界的に有名な庭師であるガー・デンが設計しました。晴れた日には日光が
-      降り注ぎ、落ち着いた雰囲気の中で食べる昼食は天下一品です。この庭では、本校が誇る吹奏楽部や合唱団の
-      発表会が月に1度催されます。吹奏楽部や合唱団の演奏を楽しみながら優雅なランチタイムを取ることも可能です。
-      素敵なランチタイムに憧れて入学を決めた生徒もいるようです。
-    </p>
-    <p>
-      <h2><u>食堂</u></h2>
-      <img src="../img/facility/meal.jpg" alt="食堂">
-      本校には食堂もあります。多くの学生に楽しんでもらえるように毎日和食、洋食、中華の3種類を用意しています。
-      値段は400円前後でお財布に優しいものとなっています。"安くて美味しい"を目指し、専属の管理栄養士が在籍しています。
-      また、年間パスポートもあり、1食あたり380円とお得であり、約半数の生徒がこちらを利用しています。
-      加えて、食堂の奥には購買もあり、時間のないとき、小腹が空いたときはこちらも是非ご利用ください。
-    </p>
-    <p>
-      <h2><u>仮眠室</u></h2>
-      <img src="../img/facility/sleep.png" alt="仮眠室">
-      本校には仮眠室も完備しています。昼寝をすることは午後の活動に対して、非常に効果的であることが示されており、
-      本校でも、今年から取り入れることにしました。空調管理、衛生管理を徹底しており、快適な昼寝をすることができます。
-      仮眠室の導入は非常に好調で、多くの生徒、親御さんから前向きな評価をいただいています。
-      時には、仮眠室が一杯になってしまい、場所が足りないことがあるので、現在仮眠室の拡張を検討しています。
-    </p>
-    <p>
-      <h2><u>パソコン室</u></h2>
-      <img src="../img/facility/office.png" alt="パソコン室">
-      教育内容でも提示した通り、本校ではプログラミングの授業があります。パソコン室と聞くと、堅苦しい場所を
-      想像するかもしれませんが、本校では写真のような開放的なパソコン室となっており、生徒の創造力を刺激
-      しています。こちらのパソコン室では1人１台最新のパソコンを用意しています。そのため、ご自身でパソコンを
-      用意する心配はありません。
-    </p>
-    <p>
-      <h2><u>図書室</u></h2>
-      <img src="../img/facility/lib.jpg" alt="図書館">
-      本校の図書館はロンドン内でも有数の美しい図書館として有名です。そのため、外部にも本の貸し出しを行っており、
-      多くの人がこの図書館を訪れます。蔵書数は高校の図書館では驚きの100000冊です。もちろん、内容も充実しており、
-      小説から、実用書、参考書に雑誌まであらゆるジャンルを揃えています。素敵な本との出会い、人との出会いを求めて、
-      是非こちらの図書館を利用してみては。お気に入りの1冊を見つけるのもいいですね。
-    </p>
+  <div class="main-inner">
+    <main class="page-main">
+      <div class="main-header__inner">
+        <h1 class="main-header">本学の設備</h1>
+      </div>
+      <div class="intro-section__content">
+        <!--中庭-->
+        <div class="intro-section__block" id="content1">
+          <div class="intro-section__img-area"></div>
+          <div class="intro-section__txt-area">
+            <h2>中庭</h2>
+            <p>
+              本校自慢の中庭。この中庭は世界的に有名な庭師であるガー・デンが設計しました。晴れた日には日光が
+              降り注ぎ、落ち着いた雰囲気の中で食べる昼食は天下一品です。この庭では、本校が誇る吹奏楽部や合唱団の
+              発表会が月に1度催されます。吹奏楽部や合唱団の演奏を楽しみながら優雅なランチタイムを取ることも可能です。
+              素敵なランチタイムに憧れて入学を決めた生徒もいるようです。
+            </p>
+          </div>
+        </div>
+        <!--食堂-->
+        <div class="intro-section__block" id="content2">
+          <div class="intro-section__img-area"></div>
+          <div class="intro-section__txt-area">
+            <h2>食堂</h2>
+            <p>
+              本校には食堂もあります。多くの学生に楽しんでもらえるように毎日和食、洋食、中華の3種類を用意しています。
+              値段は400円前後でお財布に優しいものとなっています。"安くて美味しい"を目指し、専属の管理栄養士が在籍しています。
+              また、年間パスポートもあり、1食あたり380円とお得であり、約半数の生徒がこちらを利用しています。
+              加えて、食堂の奥には購買もあり、時間のないとき、小腹が空いたときはこちらも是非ご利用ください。
+            </p>
+          </div>
+        </div>
+        <!--仮眠室-->
+        <div class="intro-section__block" id="content3">
+          <div class="intro-section__img-area"></div>
+          <div class="intro-section__txt-area">
+            <h2>仮眠室</h2>
+            <p>
+              本校には仮眠室も完備しています。昼寝をすることは午後の活動に対して、非常に効果的であることが示されており、
+              本校でも、今年から取り入れることにしました。空調管理、衛生管理を徹底しており、快適な昼寝をすることができます。
+              仮眠室の導入は非常に好調で、多くの生徒、親御さんから前向きな評価をいただいています。
+              時には、仮眠室が一杯になってしまい、場所が足りないことがあるので、現在仮眠室の拡張を検討しています。
+            </p>
+          </div>
+        </div>
+        <!--パソコン室-->
+        <div class="intro-section__block" id="content4">
+          <div class="intro-section__img-area"></div>
+          <div class="intro-section__txt-area">
+            <h2>パソコン室</h2>
+            <p>
+              教育内容でも提示した通り、本校ではプログラミングの授業があります。パソコン室と聞くと、堅苦しい場所を
+              想像するかもしれませんが、本校では写真のような開放的なパソコン室となっており、生徒の創造力を刺激
+              しています。こちらのパソコン室では1人１台最新のパソコンを用意しています。そのため、ご自身でパソコンを
+              用意する心配はありません。
+            </p>
+          </div>
+        </div>
+        <!--図書室-->
+        <div class="intro-section__block" id="content5">
+          <div class="intro-section__img-area"></div>
+          <div class="intro-section__txt-area">
+            <h2>図書室</h2>
+            <p>
+              本校の図書館はロンドン内でも有数の美しい図書館として有名です。そのため、外部にも本の貸し出しを行っており、
+              多くの人がこの図書館を訪れます。蔵書数は高校の図書館では驚きの100000冊です。もちろん、内容も充実しており、
+              小説から、実用書、参考書に雑誌まであらゆるジャンルを揃えています。素敵な本との出会い、人との出会いを求めて、
+              是非こちらの図書館を利用してみては。お気に入りの1冊を見つけるのもいいですね。
+            </p>
+          </div>
+        </div>
+      </div>
+  </div>
   </main>
   <!--フッター-->
   <footer class="page-footer"></footer>
