英語版のheader調整

--- a/english/entranceExamination-en.html
+++ b/english/entranceExamination-en.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/header-en.css">
     <link rel="stylesheet" href="../css/style-ja.css">
     <title>Entrance Examination</title>
 </head>
