文章の変更

--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -52,9 +52,9 @@
 
     <div class="overview">
       <div class="contents-head">
-        <h2>本学の概要</h2>
+        <h2>本校の概要</h2>
       </div>
-      <p>本学では国際的に活躍でき、世界に通用するようなマネジメント能力を持つ人材の育成に力を入れています。</br>
+      <p>本校では国際的に活躍でき、世界に通用するようなマネジメント能力を持つ人材の育成に力を入れています。</br>
         また人種や門地に問わず学習意欲が熱心な若者を応援します。
       </p>
     </div>
@@ -63,7 +63,7 @@
       <div class="contents-head">
         <h2>マネジメント能力の育成</h2>
       </div>
-      <p>本学では豊かなマネジメント能力を鍛えるために独自のカリキュラムや積極的な実習を行います。 </br>
+      <p>本校では豊かなマネジメント能力を鍛えるために独自のカリキュラムや積極的な実習を行います。 </br>
         実践的な力を養い、世界に通用するような水準まであなたの能力を引き上げます。
       </p>
     </div>
