文章の変更

--- a/japanese/inquiry-ja.html
+++ b/japanese/inquiry-ja.html
@@ -45,8 +45,8 @@
       </div>
       <div>
         <div class="text-top">
-          <p>本学に興味がある方はお気軽にお問い合わせください。<br>
-            必要事項をご入力いただきますと、本学の入学資料を送付いたします。</p>
+          <p>本校に興味がある方はお気軽にお問い合わせください。<br>
+            必要事項をご入力いただきますと、本校の入学資料を送付いたします。</p>
         </div>
           <div class="phone-number">
             <h2>電話番号</h2>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="form_msg">
                   <legend aligen="top"><label for="msg">Message：</label></legend>
-                  
+
                   <textarea id="msg" name="user_message" placeholder="Please write freely"></textarea>
                 </div>
                 <div class="form_button">
@@ -100,5 +100,5 @@
     <footer class="page-footer"></footer>
   </body>
   <script src="../header.js"></script>
-  
+
   </html>
