--- a/english/access-en.html
+++ b/english/access-en.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header-en.css">
-    <link rel="stylesheet" href="../css/style-ja.css">
+    <link rel="stylesheet" href="../css/style-en.css">
     <title>Access</title>
 </head>
 
