--- a/english/content-en.html
+++ b/english/content-en.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header-en.css">
-    <link rel="stylesheet" href="../css/style-ja.css">
+    <link rel="stylesheet" href="../css/style-en.css">
     <link rel="stylesheet" href="../css/content-ja.css">
     <title>Education content</title>
 </head>
