--- a/french/content-fr.html
+++ b/french/content-fr.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/style-ja.css">
+    <link rel="stylesheet" href="../css/header-en.css">
+    <link rel="stylesheet" href="../css/style-fr.css">
     <link rel="stylesheet" href="../css/content-ja.css">
     <title>Contenu pédagogique</title>
 </head>
