--- a/japanese/entranceExamination-ja.html
+++ b/japanese/entranceExamination-ja.html
@@ -2,11 +2,12 @@
 <html lang="ja">
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/style-ja.css">
-  <title>入学試験について</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/style-ja.css">
+    <link rel="stylesheet" href="../css/entranceExamination-ja.css">
+    <title>入学試験について</title>
 </head>
 
 <body>
@@ -36,7 +37,9 @@
     </header>
     <!--メイン-->
     <main class="page-main">
-        <h1>入学試験について</h1>
+        <div class="page-main__header">
+            <h1 class="page-submain__header">入学試験</h1>
+        </div>
         <table border="1">
             <tr>
                 <th>出願方法</th>
