リンクに色、下線

--- a/french/content-fr.html
+++ b/french/content-fr.html
@@ -70,7 +70,7 @@
                   <h2>Commercialisation</h2>
                   <p>Vous apprenez le marketing, la base de la gestion. Le marketing est "une activité qui recherche les produits et
                      services que veulent les consommateurs, et faciliter la distribution des producteurs aux consommateurs en déterminant les produits à fournir et
-                     la méthode des activités de vente (à partir de ce site: <a href="https://www.weblio.jp/content/マーケティング" target="_blank"> sur le marketing </a>).
+                     la méthode des activités de vente (<a href="https://www.weblio.jp/content/マーケティング" target="_blank" class="content_link"> sur le marketing </a>).
                      La chose la plus importante en marketing est de bien comprendre le marché. Vous pouvez avoir du mal à étudier,
                      mais nos professeurs expliqueront avec confiance.</p>
                 </div>
@@ -102,7 +102,7 @@
                   <p>Avez-vous déjà entendu le mot e-business? Les affaires électroniques consistent à «numériser complètement les processus d’affaires en introduisant
                      Internet et les technologies de l'information et de la communication connexes dans toutes les activités commerciales des entreprises.
                      Et ce sont les activités commerciales et commerciales, passer un tel changement et profondément numérisées. "
-                     (à partir de ce site: <a href="http://e-words.jp/w/eビジネス.html" target="_blank"> sur le commerce électronique </a>).
+                     (<a href="http://e-words.jp/w/eビジネス.html" target="_blank" class="content_link"> sur le commerce électronique </a>).
                      Vous apprenez de l'importance de l'e-business et de l'origine de l'e-business, et finalement créez un mécanisme e-business simple.</p>
                 </div>
               </div>
