--- a/english/intro-en.html
+++ b/english/intro-en.html
@@ -57,7 +57,7 @@
       <table>
           <tbody>
               <tr>
-                  <td></td>
+                  <td>Grade</td>
                   <td>men</td>
                   <td>women</td>
               </tr>
