--- a/french/intro-fr.html
+++ b/french/intro-fr.html
@@ -56,7 +56,7 @@
       <table>
           <tbody>
               <tr>
-                  <td></td>
+                  <td>Année scolaire</td>
                   <td>hommes</td>
                   <td>femmes</td>
               </tr>
