--- a/japanese/access-ja.html
+++ b/japanese/access-ja.html
@@ -2,82 +2,107 @@
 <html lang="ja">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/style-ja.css">
-    <title>アクセス</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/style-ja.css">
+  <link rel="stylesheet" href="../css/access-ja.css">
+  <title>アクセス</title>
 </head>
 
 <body>
-    <!--ヘッダー-->
+  <!--ヘッダー-->
+  <div class="main-inner">
     <header class="page-header">
-        <div class="page-header__SchoolMark">
-            <div class="SchoolMark__logo">
-                <img src="../img/SchoolMark2.png" alt="SchoolMark">
-            </div>
+      <div class="page-header__SchoolMark">
+        <div class="SchoolMark__logo">
+          <img src="../img/SchoolMark2.png" alt="SchoolMark">
         </div>
-        <div class="page-header__lang">
-            <button class="lang-EN" type="button"onclick="en()">　</button>
-            <button class="lang-JP" type="button"onclick="ja()">　</button>
-            <button class="lang-FR" type="button"onclick="fr()">　</button>
-        </div>
-        <nav class="page-header__menu">
-            <ol>
-                <li class="menu-index menu"id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
-                <li class="menu-intro menu"id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
-                <li class="menu-content menu"id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
-                <li class="menu-facility menu"id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
-                <li class="menu-ex menu"id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
-                <li class="menu-access menu"id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
-            </ol>
-        </nav>
+      </div>
+      <div class="page-header__lang">
+        <button class="lang-EN" type="button"onclick="en()">　</button>
+        <button class="lang-JP" type="button"onclick="ja()">　</button>
+        <button class="lang-FR" type="button"onclick="fr()">　</button>
+      </div>
+      <nav class="page-header__menu">
+        <ol>
+          <li class="menu-index menu"id="header-menu-index"><a href="index-ja.html">ホーム</a></li>
+          <li class="menu-intro menu"id="header-menu-intro"><a href="intro-ja.html">学校紹介</a></li>
+          <li class="menu-content menu"id="header-menu-content"><a href="content-ja.html">教育内容</a></li>
+          <li class="menu-facility menu"id="header-menu-facility"><a href="facility-ja.html">学校設備</a></li>
+          <li class="menu-ex menu"id="header-menu-ex"><a href="entranceExamination-ja.html">入試</a></li>
+          <li class="menu-access menu"id="header-menu-access"><a href="access-ja.html">アクセス</a></li>
+          <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-ja.html">お問い合わせ</a></li>
+        </ol>
+      </nav>
     </header>
     <!--メイン-->
     <main>
-        <h1>アクセス</h1>
-        <div class="access">
-          <h2>交通機関でお越しの方へ</h2>
-          <p>ロンドン西部イーリング・ロンドン特別区であるアクトン(Acton)に位置。ロンドン中心部から
-            およそ45分の場所に立地。この地域は治安が非常によく、日本人も多数住んでいます。</p>
-          <table border="1">
-          	<tbody>
-          		<tr>
-          			<th rowspan="3">ロンドン中心地から</th>
-          			<td>セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
-                    ピカデリー線(Piccadilly Line)でイーリングコモン駅(Ealing Common)まで</td>
-              </tr>
-              <tr>
-                <td>セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
-                    ピカデリー線(Piccadilly Line)でホルボーン駅(Holborn)まで。
-                    セントラル線(Central Line)に乗り換えウエストアクトン駅(West Acton)まで</td>
-              </tr>
-              <tr>
-                <td>セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
-                    ヴィクトリア線(Victoria Line)でオックスフォード・サーカス駅(Oxford Circus)まで。
-                    セントラル線(Central Line)に乗り換えウエストアクトン駅(West Acton)まで</td>
-          		</tr>
-          		<tr>
-          			<th>空港から</th>
-          			<td>ヒースロー空港から徒歩3分ハットンクロス駅(Hatton Cross)より
-                  ピカデリー線(Piccadilly Line)でイーリングコモン駅(Ealing Common)まで</td>
-          		</tr>
-          	</tbody>
-          </table>
+      <div class="page-main__header">
+        <h1 class="page-submain__header">アクセス</h1>
+      </div>
+      <div class="access">
+        <div class="page-top">
+          <h2 class="page-top_head">交通機関でお越しの方へ</h2>
+          <p>ロンドン西部イーリング・ロンドン特別区であるアクトン(Acton)に位置<br>
+            ロンドン中心部からおよそ45分の場所に立地<br>
+            この地域は治安が非常によく、日本人も多数住んでいます</p>
+          </div>
+          <div class="to_school">
+            <div class="London_to_school">              
+              <h3>ロンドン中心地から</h3>
+              セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
+              ピカデリー線(Piccadilly Line)でイーリングコモン駅(Ealing Common)まで<br>
+              セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
+              ピカデリー線(Piccadilly Line)でホルボーン駅(Holborn)まで<br>
+              セントラル線(Central Line)に乗り換えウエストアクトン駅(West Acton)までセント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
+              ヴィクトリア線(Victoria Line)でオックスフォード・サーカス駅(Oxford Circus)まで<br>
+              セントラル線(Central Line)に乗り換えウエストアクトン駅(West Acton)まで<br>
+              <div class="airport_to_school">
+                <h3>空港から</h3>
+                ヒースロー空港から徒歩3分ハットンクロス駅(Hatton Cross)より
+                ピカデリー線(Piccadilly Line)でイーリングコモン駅(Ealing Common)まで
+              </div>
+            </div>            
+          </div>
         </div>
         <div class="figure">
           <img src="../img/access/access.jpg" alt="図">
         </div>
         <div class="map">
           <h2>本学立地</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4010.3314678545985!2d-0.2827834859472339!3d51.51414552059801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2sfr!4v1583744827474!5m2!1sja!2sfr"
-                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4010.3314678545985!2d-0.2827834859472339!3d51.51414552059801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2sfr!4v1583744827474!5m2!1sja!2sfr"
+          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
+      </div>
     </main>
     <!--フッター-->
     <footer class="page-footer"></footer>
-</body>
-<script src="../header.js"></script>
-
-</html>
+  </body>
+  <script src="../header.js"></script>
+  
+  </html>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
