--- a/japanese/intro-ja.html
+++ b/japanese/intro-ja.html
@@ -37,6 +37,7 @@
   </header>
   <!--main-->
   <main>
+    <div class="main-inner">
     <div class="page-main__header">
       <h1 class="page-submain__header">学校紹介</h1>
     </div>
@@ -148,6 +149,7 @@
     </div>
 
   </main>
+</div>
 
   <!--フッター-->
   <footer>
